# shell-scripts

./: README.md  cmakefuncs.sh  create-app.sh  decorations.sh  file_management_funcs.sh  githelper.sh  homebrew.sh
brew_fetch_cmake/: install.sh
cmake/include/: main.hpp
cmake/src/: main.cpp
create-app/: create-app.sh
create-app/cmake/: CMakeLists.txt
create-app/cmake/include/: Config.hpp
create-app/cmake/include/State/Base/: State.hpp
create-app/cmake/src/: main.cpp
create-app/cmake/src/Core/: Resources.cpp
create-app/cmake/src/State/: HomeState.cpp
create-app/cmake/src/State/Base/: State.cpp
create-app/cpp/src/: main.cpp
create-app/sfml/include/Core/: Application.hpp  Sansation.hpp  SystemInfo.hpp
create-app/sfml/include/State/: PauseState.hpp  PlayState.hpp
create-app/sfml/src/Core/: Sansation.cpp
custom_bash/: custom_bash.sh
sfml/include/Core/: Resources.hpp
sfml/include/State/: HomeState.hpp
sfml/include/State/Base/: StateMachine.hpp
sfml/src/Core/: Application.cpp
sfml/src/State/: PauseState.cpp  PlayState.cpp
sfml/src/State/Base/: StateMachine.cpp
